--- a/Develop/index.html
+++ b/Develop/index.html
@@ -33,7 +33,7 @@
     <!-- Example of a past time block. The "past" class adds a gray background color. -->
     <div id="hour-9" class="row time-block past">
       <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-9" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
@@ -42,7 +42,7 @@
     <!-- Example of a a present time block. The "present" class adds a red background color. -->
     <div id="hour-10" class="row time-block present">
       <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-10" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
@@ -59,7 +59,7 @@
 
     <div id="hour-12" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">12AM</div>
-      <textarea id="text-hour-11" class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-12" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
@@ -67,7 +67,7 @@
 
     <div id="hour-13" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
-      <textarea id="text-hour-11" class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-13" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
@@ -75,7 +75,7 @@
 
     <div id="hour-14" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
-      <textarea id="text-hour-11" class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-14" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
@@ -83,7 +83,7 @@
 
     <div id="hour-15" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
-      <textarea id="text-hour-11" class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-15" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
@@ -91,7 +91,7 @@
 
     <div id="hour-16" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
-      <textarea id="text-hour-11" class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-16"" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
@@ -99,7 +99,7 @@
 
     <div id="hour-17" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
-      <textarea id="text-hour-11" class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-17" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
@@ -107,7 +107,7 @@
 
     <div id="hour-18" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">6PM</div>
-      <textarea id="text-hour-11" class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-18" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
@@ -115,7 +115,7 @@
 
     <div id="hour-19" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">7PM</div>
-      <textarea id="text-hour-11" class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-19" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
@@ -123,7 +123,7 @@
 
     <div id="hour-20" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">8PM</div>
-      <textarea id="text-hour-11" class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-20" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
@@ -131,7 +131,7 @@
 
     <div id="hour-21" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">9PM</div>
-      <textarea id="text-hour-11" class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-21" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
