--- a/index.html
+++ b/index.html
@@ -20,17 +20,9 @@
     <p id="currentDay" class="lead"></p>
   </header>
   <div class="container-lg px-5">
-    <!-- Use class for "past", "present", and "future" to apply styles to the
-        time-block divs accordingly. The javascript will need to do this by
-        adding/removing these classes on each div by comparing the hour in the
-        id to the current hour. The html provided below is meant to be an example
-        demonstrating how the css provided can be leveraged to create the
-        desired layout and colors. The html below should be removed or updated
-        in the finished product. Remember to delete this comment once the
-        code is implemented.
-        -->
-
-    <!-- Example of a past time block. The "past" class adds a gray background color. -->
+    <!--The "past" class adds a gray background color. -->
+    <!--The "present" class adds a red background color. -->
+    <!--The "future" class adds a green background color. -->
     <div id="hour-9" class="row time-block past">
       <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
       <textarea id="text-hour-9" class="col-8 col-md-10 description" rows="3"> </textarea>
@@ -39,7 +31,6 @@
       </button>
     </div>
 
-    <!-- Example of a a present time block. The "present" class adds a red background color. -->
     <div id="hour-10" class="row time-block present">
       <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
       <textarea id="text-hour-10" class="col-8 col-md-10 description" rows="3"> </textarea>
@@ -48,7 +39,6 @@
       </button>
     </div>
 
-    <!-- Example of a future time block. The "future" class adds a green background color. -->
     <div id="hour-11" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
       <textarea id="text-hour-11" class="col-8 col-md-10 description" rows="3"> </textarea>
@@ -91,7 +81,7 @@
 
     <div id="hour-16" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
-      <textarea id="text-hour-16"" class="col-8 col-md-10 description" rows="3"> </textarea>
+      <textarea id="text-hour-16" class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
